@@ -1,6 +1,7 @@
 #ifdef HAVE_CONFIG_H
 # include "elementary_config.h"
 #endif
+#include <sys/stat.h>
 #include <Elementary.h>
 #include "elm_priv.h"
 #ifdef HAVE_MMAN_H
@@ -39,7 +40,7 @@ enum
 
 typedef struct _Tmp_Info      Tmp_Info;
 typedef struct _Saved_Type    Saved_Type;
-typedef struct _Escape        Escape;
+typedef struct _Cnp_Escape    Cnp_Escape;
 typedef struct _Dropable      Dropable;
 
 struct _Tmp_Info
@@ -59,7 +60,7 @@ struct _Saved_Type
    Eina_Bool     textreq: 1;
 };
 
-struct _Escape
+struct _Cnp_Escape
 {
    const char *escape;
    const char *value;
